--- a/viz/templates/base.html
+++ b/viz/templates/base.html
@@ -2,8 +2,14 @@
 <html>
 <head>
   <title>{% block title %}{% endblock %}</title>
-  <style>
-  </style>
+
+  {% load staticfiles %}
+  <script src="{% static "jquery-1.11.0.min.js" %}"></script>
+  <script src="{% static "bootstrap-3.1.1/js/bootstrap.js" %}"></script>
+
+  <link rel="stylesheet" href="{% static "bootstrap-3.1.1/css/bootstrap.css" %}"/>
+  <link rel="stylesheet" href="{% static "bootstrap-3.1.1/css/bootstrap-theme.css" %}"/>
+
   {% block head_scripts %}
   {% endblock head_scripts %}
 </head>
