--- a/vaporviz/page_source/vapor_wordclouds.css
+++ b/vaporviz/page_source/vapor_wordclouds.css
@@ -11,15 +11,26 @@
     display: none;
 }
 
-.playover {
-    background-color: yellow;
-}
-
-.active_wordcloud_token {
+span.active_wordcloud_token {
     background-color: pink;
 }
 
-.wordcloud_token {
-    margin-left: 5px;
-    margin-right: 5px;
+/* 'playover' rule comes after 'active_wordcloud_token' rule,
+   so that the active token changes color during playover
+ */
+span.playover {
+    background-color: yellow;
+}
+
+span.wordcloud_token {
+    padding-left: 5px;
+    padding-right: 5px;
+    border: 1px solid transparent;
+    border: 1px solid transparent;
+}
+
+span.wordcloud_token:hover {
+    border: 1px solid #909090;
+    background-color: #F0F0F0;
+    cursor: pointer;
 }
