Fixed CSS bug with wordcloud base template
The wordcloud was hidden behind the audio playback controls due to a
CSS issue with the 'base_wordcloud.html' template.

--- a/visualizer/templates/base_wordcloud.html
+++ b/visualizer/templates/base_wordcloud.html
@@ -13,6 +13,9 @@
   {% endblock head_style %}
 
   <style>
+    body {
+      padding-top: 290px;
+    }
     .document_link {
       margin: 0.5em;
     }
