--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -66,7 +66,7 @@
         'utterance_ids': ["{{document.id}}"]
       };
       wordcloud_from_utterances(
-        "{{corpus.name}}",
+        "{{corpus.id}}",
         [utterance_set1],
         pseudotermVisualizer,
         { base_fontsize: 10 }
