--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -61,13 +61,13 @@
         termVisualizer.pause();
       });
 
-      var utterance_set1 = {
+      var document_set1 = {
         'dataset_name': 'Set1',
-        'utterance_ids': ["{{document.id}}"]
+        'document_ids': ["{{document.id}}"]
       };
-      wordcloud_from_utterances(
+      wordcloud_from_documents(
         "{{corpus.id}}",
-        [utterance_set1],
+        [document_set1],
         termVisualizer,
         { base_fontsize: 10 }
       );
@@ -134,7 +134,7 @@
             </div>
             -->
             <div class="form-group">
-              <div id="term_visualizer_utterance_list" style="padding-left: 1em;"></div>
+              <div id="term_visualizer_document_list" style="padding-left: 1em;"></div>
             </div>
           </div>
         </div>
