--- a/visualizer/static/visualizer/vapor_wordclouds.css
+++ b/visualizer/static/visualizer/vapor_wordclouds.css
@@ -24,6 +24,7 @@ span.playover {
 
 span.wordcloud_token {
     border: 1px solid transparent;
+    display: inline-block;
     padding-left: 5px;
     padding-right: 5px;
     white-space: nowrap;
