--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -2,14 +2,6 @@
 
 {% block head_scripts %}
   <script>
-    // Adjust the padding at top of document when height of navbar changes
-    function updateBodyPaddingWhenControlsChangeSize() {
-      if ($('#waveform_navbar').length > 0) {
-        var new_control_height = 5 + $('#waveform_navbar').height();
-        $('body').attr('style', 'padding-top: ' + new_control_height + 'px;');
-      }
-    }
-
     $(document).ready(function() {
       var waveformVisualizer = new WaveformVisualizer(
         'document_visualizer',
@@ -53,6 +45,9 @@
       );
       termVisualizer.addControls($('#term_audio_controls'));
 
+      // Update padding of body element after adding navigation controls
+      updateBodyPaddingWhenControlsChangeSize();
+
       // Prevent two audio clips from playing simultaneously
       termVisualizer.wavesurfer.on('play', function() {
         waveformVisualizer.pause();
@@ -61,100 +56,12 @@
         termVisualizer.pause();
       });
 
-      /**
-       *
-       */
-      function updateActiveTerm(event) {
-        var corpus_id = event.data.corpus_id;
-        var term_id = event.data.term_id;
-        $('#pt_eng_display')
-          .data('term_id', term_id)
-          .val($("#term_" + term_id).data("eng_display"));
+      addLabelEditorEventHandlers();
 
-        // There can be only one active term at a time
-        $(".active_wordcloud_token").removeClass("active_wordcloud_token");
-        $("#term_" + term_id).addClass("active_wordcloud_token");
-
-        termVisualizer.loadAndPlayURL('/visualizer/' + corpus_id + '/term/' + term_id + '.wav');
-      }
-
-      function updateTermLabel() {
-        var label = $("#pt_eng_display").val();
-        var term_id = $("#pt_eng_display").data('term_id');
-
-        // Only update the term label if the user has previously selected a term
-        if (term_id) {
-          $("#term_" + term_id)
-            .data("eng_display", label)
-            // Update the term label shown in the word cloud
-            .text(label);
-
-          $.ajax({
-            url: "/visualizer/term/"+term_id+"/update",
-            type: "POST",
-            data: JSON.stringify({
-              "eng_display": label
-            })
-          });
-        }
-      }
-
-      // Add event handlers for when user changes the label for a term
-      $("#pt_eng_display")
-        .focusout(function() {
-          updateTermLabel();
-        })
-        .keydown(function(e) {
-          // Update annotation when users hit enter
-          if (e.keyCode === 13) {
-            updateTermLabel();
-          }
-        });
-
-      $.getJSON("{% url 'wordcloud_json_for_document' corpus.id document.id %}", function(data) {
-        var sort_keys = data.sort_keys;
-        var terms = data.terms;
-        var wordcloud_div = $("#wordcloud_div");
-
-        for (var termIndex in terms) {
-          var i;
-          var term = terms[termIndex];
-          var tooltip_text = "";
-
-          var wordcloud_span = $('<span>')
-            .attr('id', 'term_' + term.term_id)
-            .on('click', {'corpus_id': term.corpus_id, 'term_id': term.term_id}, updateActiveTerm);
-
-          $.each(term, function(key, value) {
-            wordcloud_span.data(key, value);
-            if (sort_keys[key]) {
-              tooltip_text += sort_keys[key] + ": " + value + "\n";
-            }
-          });
-
-          var span_classes = ['wordcloud_token'];
-          for (i = 0; i < term.audio_event_ids.length; i++) {
-            span_classes.push("audio_event_span_" + term.audio_event_ids[i]);
-          }
-          for (i = 0; i < term.pt_ids.length; i++) {
-            span_classes.push("term_span_" + term.pt_ids[i]);
-          }
-          for (i = 0; i < term.document_ids.length; i++) {
-            span_classes.push("document_span_" + term.document_ids[i]);
-          }
-          wordcloud_span.addClass(span_classes.join(" "));
-
-          // Add tooltip
-          wordcloud_span
-            .attr('data-placement', 'bottom')
-            .attr('data-toggle', 'tooltip')
-            .attr('title', tooltip_text)
-            .tooltip();
-
-          wordcloud_span.text(term.eng_display);
-          wordcloud_div.append(wordcloud_span);
-        }
-      });
+      createWordcloud('wordcloud_div',
+                      "{% url 'wordcloud_json_for_document' corpus.id document.id %}",
+                      termVisualizer
+      );
     });
 
     var audio_events = [
@@ -204,6 +111,22 @@
               <label for="pt_eng_display">English</label>
               <input id="pt_eng_display"></input>
             </div>
+
+            <!--
+            <div class="form-group">
+                <select id="sort_key_select" class="selectpicker" data-width="fit" data-style="btn-default btn-xs">
+                </select>
+            </div>
+            -->
+
+            <div class="btn-group">
+                <button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" id="sort_menu">
+                    Sort <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" id="sort_menu_items">
+                </ul>
+            </div>
+
             <!--
             <div class="form-group">
               <label for="pt_native_display">Native</label>
