--- a/visualizer/templates/base_wordcloud.html
+++ b/visualizer/templates/base_wordcloud.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="{% static "visualizer/jquery-ui-1.10.4/css/ui-lightness/jquery-ui-1.10.4.css" %}" />
   <link rel="stylesheet" href="{% static "visualizer/bootstrap-3.1.1/css/bootstrap.css" %}" />
   <link rel="stylesheet" href="{% static "visualizer/bootstrap-3.1.1/css/bootstrap-theme.css" %}" />
+  <link rel="stylesheet" href="{% static "visualizer/bootstrap-select-1.10.0/css/bootstrap-select.css" %}" />
   <link rel="stylesheet" href="{% static "visualizer/vapor_wordclouds.css" %}" />
 
   {% block head_style %}
@@ -23,6 +24,9 @@
   <script src="{% static "visualizer/jquery-1.11.1.min.js" %}"></script>
   <script src="{% static "visualizer/jquery-ui-1.10.4/js/jquery-ui-1.10.4.min.js" %}"></script>
   <script src="{% static "visualizer/bootstrap-3.1.1/js/bootstrap.js" %}"></script>
+  <script src="{% static "visualizer/bootstrap-select-1.10.0/js/bootstrap-select.js" %}"></script>
+
+  <script src="{% static "visualizer/tinysort.js" %}"></script>
 
   <script src="{% static "visualizer/wavesurfer/wavesurfer.js" %}"></script>
   <script src="{% static "visualizer/wavesurfer/webaudio.js" %}"></script>
@@ -31,6 +35,7 @@
   <script src="{% static "visualizer/wavesurfer/drawer.js" %}"></script>
   <script src="{% static "visualizer/wavesurfer/drawer.canvas.js" %}"></script>
 
+  <script src="{% static "visualizer/vapor_wordclouds.js" %}"></script>
   <script src="{% static "visualizer/waveform_visualizer.js" %}"></script>
 
   {% block head_scripts %}
