--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -14,26 +14,25 @@
       );
 
       waveformVisualizer.wavesurfer.on('region-in', function(marker) {
-        $('.audio_event_span_' + marker.id).addClass('playover');
+        $('.audio_fragment_span_' + marker.id).addClass('playover');
       });
 
       waveformVisualizer.wavesurfer.on('region-out', function(marker) {
-        $('.audio_event_span_' + marker.id).removeClass('playover');
+        $('.audio_fragment_span_' + marker.id).removeClass('playover');
       });
 
       waveformVisualizer.wavesurfer.on('ready', function() {
-        var i, audioEventSpan;
-        for (i = 0; i < audio_events.length; i++) {
+        for (var i = 0; i < audio_fragments.length; i++) {
           waveformVisualizer.wavesurfer.mark({
-            'id': audio_events[i]['_id'],
+            'id': audio_fragments[i]['_id'],
             'color': 'blue',
-            'position': audio_events[i]['start_offset']
+            'position': audio_fragments[i]['start_offset']
           });
 
           waveformVisualizer.wavesurfer.region({
-            'id': audio_events[i]['_id'],
-            'startPosition': audio_events[i]['start_offset'],
-            'endPosition': audio_events[i]['end_offset']
+            'id': audio_fragments[i]['_id'],
+            'startPosition': audio_fragments[i]['start_offset'],
+            'endPosition': audio_fragments[i]['end_offset']
           });
         }
       });
@@ -64,7 +63,7 @@
       );
     });
 
-    var audio_events = [
+    var audio_fragments = [
       {% for audio_fragment in audio_fragments %}
       {
         'start_offset': {{audio_fragment.start_offset}} / 100.0,
