--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -21,20 +21,22 @@
         $('.audio_fragment_span_' + marker.id).removeClass('playover');
       });
 
-      waveformVisualizer.wavesurfer.on('ready', function() {
-        for (var i = 0; i < audio_fragments.length; i++) {
-          waveformVisualizer.wavesurfer.mark({
-            'id': audio_fragments[i]['_id'],
-            'color': 'blue',
-            'position': audio_fragments[i]['start_offset']
-          });
+      $.getJSON("{% url 'document_audio_fragments_as_json' corpus_id document_id %}", function(audio_fragments) {
+        waveformVisualizer.wavesurfer.on('ready', function() {
+          for (var i = 0; i < audio_fragments.length; i++) {
+            waveformVisualizer.wavesurfer.mark({
+              'id': audio_fragments[i]['audio_fragment_id'],
+              'color': 'blue',
+              'position': audio_fragments[i]['start_offset'] / 100.0
+            });
 
-          waveformVisualizer.wavesurfer.region({
-            'id': audio_fragments[i]['_id'],
-            'startPosition': audio_fragments[i]['start_offset'],
-            'endPosition': audio_fragments[i]['end_offset']
-          });
-        }
+            waveformVisualizer.wavesurfer.region({
+              'id': audio_fragments[i]['audio_fragment_id'],
+              'startPosition': audio_fragments[i]['start_offset'] / 100.0,
+              'endPosition': audio_fragments[i]['end_offset'] / 100.0
+            });
+          }
+        });
       });
 
       var termVisualizer = new WaveformVisualizer(
@@ -62,16 +64,6 @@
                       termVisualizer
       );
     });
-
-    var audio_fragments = [
-      {% for audio_fragment in audio_fragments %}
-      {
-        'start_offset': {{audio_fragment.start_offset}} / 100.0,
-        'end_offset': {{audio_fragment.end_offset}} / 100.0,
-        '_id': '{{audio_fragment.id}}'
-      },
-      {% endfor %}
-    ];
   </script>
 {% endblock head_scripts %}
 
