Renamed Term.eng_display to Term.label

--- a/visualizer/templates/corpus_wordcloud.html
+++ b/visualizer/templates/corpus_wordcloud.html
@@ -36,8 +36,8 @@
             <span id="pt_snippets_audio_player"></span>
           </div>
           <div class="form-group">
-            <label for="pt_eng_display">English</label>
-            <input id="pt_eng_display"></input>
+            <label for="term_label">Label</label>
+            <input id="term_label"></input>
           </div>
 
           <div class="btn-group">
