--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -98,8 +98,8 @@
         <div class="col-md-11">
           <div class="form-inline">
             <div class="form-group">
-              <label for="pt_eng_display">English</label>
-              <input id="pt_eng_display"></input>
+              <label for="term_label">Label</label>
+              <input id="term_label"></input>
             </div>
 
             <!--
