Changed displayed wordcloud sort control from drop-down box to select control

--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -89,24 +89,25 @@
         <div class="col-md-11">
           <div class="form-inline">
             <div class="form-group">
-              <label for="term_label">Label</label>
+              <label for="term_label">Label:</label>
               <input id="term_label"></input>
             </div>
 
-            <!--
             <div class="form-group">
+                <label for="sort_key_select">Sort:</label>
                 <select id="sort_key_select" class="selectpicker" data-width="fit" data-style="btn-default btn-xs">
                 </select>
             </div>
-            -->
 
+            <!--
             <div class="btn-group">
-                <button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" id="sort_menu">
-                    Sort <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" id="sort_menu_items">
-                </ul>
+              <button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" id="sort_menu">
+                Sort <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" id="sort_menu_items">
+              </ul>
             </div>
+            -->
 
             <div class="form-group">
               <div id="term_visualizer_document_list" style="padding-left: 1em;"></div>
