--- a/visualizer/templates/corpus_wordcloud.html
+++ b/visualizer/templates/corpus_wordcloud.html
@@ -40,13 +40,21 @@
             <input id="term_label"></input>
           </div>
 
-          <div class="btn-group">
-              <button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" id="sort_menu">
-                  Sort <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" id="sort_menu_items">
-              </ul>
+          <div class="form-group">
+            <label for="sort_key_select">Sort:</label>
+            <select id="sort_key_select" class="selectpicker" data-width="fit" data-style="btn-default btn-xs">
+            </select>
           </div>
+
+          <!--
+          <div class="btn-group">
+            <button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" id="sort_menu">
+              Sort <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" id="sort_menu_items">
+            </ul>
+          </div>
+          -->
 
           <div class="form-group">
             <div id="waveform_visualizer_document_list" style="padding-left: 1em;"></div>
