Added word size UI control to corpus wordcloud view

--- a/visualizer/templates/corpus_wordcloud.html
+++ b/visualizer/templates/corpus_wordcloud.html
@@ -46,6 +46,12 @@
             </select>
           </div>
 
+          <div class="form-group">
+            <label for="size_key_select">Word size:</label>
+            <select id="size_key_select" class="selectpicker" data-width="fit" data-style="btn-default btn-xs">
+            </select>
+          </div>
+
           <!--
           <div class="btn-group">
             <button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" id="sort_menu">
