--- a/visualizer/templates/base.html
+++ b/visualizer/templates/base.html
@@ -25,6 +25,15 @@
 <body>
 
   <div class="container">
+    {% if user.is_authenticated %}
+    Logged in as <b>{{ user.username }}</b> -
+    <a href="{% url 'admin:logout' %}?next=/">Logout</a>
+    {% else %}
+    <a href="{% url 'admin:login' %}?next=/">Login</a>
+    {% endif %}
+
+    <hr />
+
     {% block content %}
     {% endblock content %}
   </div><!-- /.container -->
