--- a/visualizer/templates/index.html
+++ b/visualizer/templates/index.html
@@ -5,6 +5,7 @@
 <h1>Corpora</h1>
 <ul>
   {% for corpus in current_corpora %}
+  {% if not corpus.protected_corpus or user.is_authenticated %}
   <li><h2>{{corpus.name}}</h2></li>
   <ul>
     <li>
@@ -14,6 +15,7 @@
       <a href="{% url 'corpus_document_list' corpus.id %}">Corpus Document List</a>
     </li>
   </ul>
+  {% endif %}
   {% endfor %}
 </ul>
 
