--- a/visualizer/templates/base.html
+++ b/visualizer/templates/base.html
@@ -27,9 +27,9 @@
   <div class="container">
     {% if user.is_authenticated %}
     Logged in as <b>{{ user.username }}</b> -
-    <a href="{% url 'admin:logout' %}?next=/">Logout</a>
+    <a href="{% url 'logout' %}?next=/">Logout</a>
     {% else %}
-    <a href="{% url 'admin:login' %}?next=/">Login</a>
+    <a href="{% url 'login' %}?next=/">Login</a>
     {% endif %}
 
     <hr />
