--- a/visualizer/templates/login.html
+++ b/visualizer/templates/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title></title>
+  {% load staticfiles %}
   <link rel="stylesheet" href="{% static "visualizer/jquery-ui-1.10.4/css/ui-lightness/jquery-ui-1.10.4.css" %}" />
   <link rel="stylesheet" href="{% static "visualizer/bootstrap-3.1.1/css/bootstrap.css" %}" />
   <link rel="stylesheet" href="{% static "visualizer/bootstrap-3.1.1/css/bootstrap-theme.css" %}" />
@@ -9,40 +10,41 @@
 <body>
 
   <div class="container">
+    <div style="margin-top: 2em;">
+      {% block content %}
 
-  {% block content %}
+      {% if form.errors %}
+      <p>Your username and password didn't match. Please try again.</p>
+      {% endif %}
 
-  {% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
-  {% endif %}
+      {% if next %}
+        {% if user.is_authenticated %}
+        <p>Your account doesn't have access to this page. To proceed,
+        please login with an account that has access.</p>
+        {% else %}
+        <p>Please login to see this page.</p>
+        {% endif %}
+      {% endif %}
 
-  {% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-  {% endif %}
+      <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        <table>
+        <tr>
+          <td>{{ form.username.label_tag }}</td>
+          <td>{{ form.username }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.password.label_tag }}</td>
+          <td>{{ form.password }}</td>
+        </tr>
+        </table>
 
-  <form method="post" action="{% url 'login' %}">
-  {% csrf_token %}
-  <table>
-  <tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-  </tr>
-  <tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-  </tr>
-  </table>
+        <input type="submit" value="login" />
+        <input type="hidden" name="next" value="{{ next }}" />
+      </form>
 
-  <input type="submit" value="login" />
-  <input type="hidden" name="next" value="{{ next }}" />
-  </form>
-
-  {% endblock %}
+      {% endblock %}
+    </div>
 
   </div><!-- /.container -->
 
