Added padding to bottom of base templates

--- a/visualizer/templates/base.html
+++ b/visualizer/templates/base.html
@@ -11,6 +11,10 @@
   {% endblock head_style %}
 
   <style>
+    body {
+      padding-bottom: 3em;
+    }
+
     .document_link {
       margin: 0.5em;
     }
