Renamed function with more accurate description
Renamed updateBodyPaddingWhenControlsChangeSize() to
updateBodyPaddingTop().  This function is called when the controls
change size, but it can be called for other reasons as well.

--- a/visualizer/templates/corpus_wordcloud.html
+++ b/visualizer/templates/corpus_wordcloud.html
@@ -6,12 +6,12 @@
       var waveformVisualizer = new WaveformVisualizer(
         'waveform_visualizer',
         {},
-        { controlsResizeCallback: updateBodyPaddingWhenControlsChangeSize }
+        { controlsResizeCallback: updateBodyPaddingTop }
       );
       waveformVisualizer.addControls($('#pt_snippets_audio_player'));
 
       // Update padding of body element after adding navigation controls
-      updateBodyPaddingWhenControlsChangeSize();
+      updateBodyPaddingTop();
 
       addLabelEditorEventHandlers();
 
