Initial (partially functional) TermCloud implementation using Backbone.js

--- a/visualizer/templates/base_wordcloud.html
+++ b/visualizer/templates/base_wordcloud.html
@@ -26,6 +26,8 @@
   <script src="{% static "visualizer/jquery-ui-1.10.4/js/jquery-ui-1.10.4.min.js" %}"></script>
   <script src="{% static "visualizer/bootstrap-3.1.1/js/bootstrap.js" %}"></script>
   <script src="{% static "visualizer/bootstrap-select-1.10.0/js/bootstrap-select.js" %}"></script>
+  <script src="{% static "visualizer/underscore.js" %}"></script>
+  <script src="{% static "visualizer/backbone.js" %}"></script>
 
   <script src="{% static "visualizer/tinysort.js" %}"></script>
 
@@ -36,6 +38,7 @@
   <script src="{% static "visualizer/wavesurfer/drawer.js" %}"></script>
   <script src="{% static "visualizer/wavesurfer/drawer.canvas.js" %}"></script>
 
+  <script src="{% static "visualizer/termcloud.js" %}"></script>
   <script src="{% static "visualizer/vapor_wordclouds.js" %}"></script>
   <script src="{% static "visualizer/waveform_visualizer.js" %}"></script>
 
