Renamed vapor_wordclouds.css to termcloud.css.  Removed unused CSS rules.

--- a/visualizer/templates/base_wordcloud.html
+++ b/visualizer/templates/base_wordcloud.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{% static "visualizer/bootstrap-3.1.1/css/bootstrap.css" %}" />
   <link rel="stylesheet" href="{% static "visualizer/bootstrap-3.1.1/css/bootstrap-theme.css" %}" />
   <link rel="stylesheet" href="{% static "visualizer/bootstrap-select-1.10.0/css/bootstrap-select.css" %}" />
-  <link rel="stylesheet" href="{% static "visualizer/vapor_wordclouds.css" %}" />
+  <link rel="stylesheet" href="{% static "visualizer/termcloud.css" %}" />
 
   {% block head_style %}
   {% endblock head_style %}
