--- a/visualizer/templates/index.html
+++ b/visualizer/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load humanize %}
 
 {% block content %}
 
@@ -15,12 +16,12 @@
       <a href="{% url 'corpus_document_list' corpus.id %}">Corpus Document List</a>
     </li>
     <li>
-      {{corpus.document_set.count}} Documents,
+      {{corpus.document_set.count|intcomma}} Documents /
       {% if corpus.documenttopic_set.count %}
-      {{corpus.documenttopic_set.count}} Document Topics,
+      {{corpus.documenttopic_set.count|intcomma}} Document Topics /
       {% endif %}
-      {{corpus.total_terms}} Terms,
-      {{corpus.total_audio_fragments}} Utterances
+      {{corpus.total_terms|intcomma}} Terms /
+      {{corpus.total_audio_fragments|intcomma}} Utterances
     </li>
   </ul>
   {% endif %}
