--- a/visualizer/templates/base.html
+++ b/visualizer/templates/base.html
@@ -29,12 +29,19 @@
 <body>
 
   <div class="container">
-    {% if user.is_authenticated %}
-    Logged in as <b>{{ user.username }}</b> -
-    <a href="{% url 'logout' %}?next=/">Logout</a>
-    {% else %}
-    <a href="{% url 'login' %}?next=/">Login</a>
-    {% endif %}
+    <div>
+      <div class="pull-left">
+        <a href="{% url 'index' %}">Home</a>
+      </div>
+      <div class="pull-right">
+        {% if user.is_authenticated %}
+        Logged in as <b>{{ user.username }}</b> -
+        <a href="{% url 'logout' %}?next=/">Logout</a>
+        {% else %}
+        <a href="{% url 'login' %}?next=/">Login</a>
+        {% endif %}
+      </div>
+    </div>
 
     <hr />
 
