Updated DocumentTopic view to only show Terms with DocumentTopicTermInfo scores.

--- a/visualizer/templates/document_topic.html
+++ b/visualizer/templates/document_topic.html
@@ -97,6 +97,10 @@
     {{ document_topic.terms.count|intcomma }} Terms
   </div>
 
+  <div>
+    Showing only Terms with high Descriptive and/or Discriminating scores
+  </div>
+
   <hr />
 
   <div id="termcloud">
