Display check mark (that fades out) after updating a term label.
Addresses #11.

--- a/visualizer/templates/corpus_wordcloud.html
+++ b/visualizer/templates/corpus_wordcloud.html
@@ -45,6 +45,8 @@
           <div class="form-group">
             <label for="term_label">Label</label>
             <input id="term_label"></input>
+            <span id="term_label_feedback" class="glyphicon glyphicon-ok form-control-feedback"
+                  style="display: none;" aria-hidden="true"></span>
           </div>
 
           <div class="form-group">
