--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -95,9 +95,11 @@
         </div>
         <div class="col-md-11">
           <div class="form-inline">
-            <div class="form-group">
+            <div class="form-group has-feedback">
               <label for="term_label">Label:</label>
               <input id="term_label"></input>
+              <span id="term_label_feedback" class="glyphicon glyphicon-ok form-control-feedback"
+                    style="display: none;" aria-hidden="true"></span>
             </div>
 
             <div class="form-group">
